--- a/feladat.html
+++ b/feladat.html
@@ -546,3 +546,4 @@ UnitedKingdom_JanuaryGarden2022, <b>updated</b>, 154, <a href="https://www.munze
 USA_CRFarmersField, <b>updated</b>, 389, <a href="https://www.munzee.com/map/9zqy6mwek/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRFarmersField.json" target="_blank">json</a> <b>100%</b><br />
 USA_CRMuscleCar, <b>updated</b>, 452, <a href="https://www.munzee.com/map/9zqy6kzhw/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRMuscleCar.json" target="_blank">json</a> <b>100%</b><br />
 USA_JacobLLoosePark, <b>updated</b>, 774, <a href="https://www.munzee.com/map/9yuwp3nk2/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_JacobLLoosePark.json" target="_blank">json</a> <b>100%</b><br />
+USA_CRSafari, <b>updated</b>, 700, <a href="https://www.munzee.com/map/9zqy6tnvg/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRSafari.json" target="_blank">json</a> <b>100%</b><br />
