--- a/feladat.html
+++ b/feladat.html
@@ -549,3 +549,4 @@ USA_JacobLLoosePark, <b>updated</b>, 774, <a href="https://www.munzee.com/map/9y
 USA_CRSafari, <b>updated</b>, 700, <a href="https://www.munzee.com/map/9zqy6tnvg/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRSafari.json" target="_blank">json</a> <b>100%</b><br />
 USA_CRApril, <b>updated</b>, 507, <a href="https://www.munzee.com/map/9zqy6tdmm/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRApril.json" target="_blank">json</a> <b>100%</b><br />
 USA_PicassoRob, <b>updated</b>, 569, <a href="https://www.munzee.com/map/9yuwpepc9/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PicassoRob.json" target="_blank">json</a> <b>100%</b><br />
+USA_CRFlatMattLovesBaseball, <b>updated</b>, 185, <a href="https://www.munzee.com/map/9zqyfm0r7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRFlatMattLovesBaseball.json" target="_blank">json</a> <b>100%</b><br />
