--- a/feladat.html
+++ b/feladat.html
@@ -553,3 +553,4 @@ USA_CRFlatMattLovesBaseball, <b>updated</b>, 185, <a href="https://www.munzee.co
 USA_FlatRobBirthday, <b>updated</b>, 642, <a href="https://www.munzee.com/map/9zqyctk1k/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FlatRobBirthday.json" target="_blank">json</a> <b>100%</b><br />
 USA_WestDesMoinesPacMan, <b>updated</b>, 636, <a href="https://www.munzee.com/map/9zmk6nyww/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WestDesMoinesPacMan.json" target="_blank">json</a><br />
 USA_CRFeather, <b>updated</b>, 735, <a href="https://www.munzee.com/map/9zqydmwhp/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRFeather.json" target="_blank">json</a> <b>100%</b><br />
+USA_BlackCat, <b>updated</b>, 260, <a href="https://www.munzee.com/map/9yuwp8m1z/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BlackCat.json" target="_blank">json</a> <b>100%</b><br />
