--- a/feladat.html
+++ b/feladat.html
@@ -557,3 +557,16 @@ USA_BlackCat, <b>updated</b>, 260, <a href="https://www.munzee.com/map/9yuwp8m1z
 USA_CRJonesParkBirthday7, <b>updated</b>, 348, <a href="https://www.munzee.com/map/9zqydku0v/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRJonesParkBirthday7.json" target="_blank">json</a> <b>100%</b><br />
 USA_NoelridgeMystery, <b>updated</b>, 441, <a href="https://www.munzee.com/map/9zqz432fm/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_NoelridgeMystery.json" target="_blank">json</a> <b>100%</b><br />
 USA_WestDesMoinesStrawberry, <b>updated</b>, 103, <a href="https://www.munzee.com/map/9zmk65e9v/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WestDesMoinesStrawberry.json" target="_blank">json</a><br />
+----csoportok<br />
+----városok<br />
+Australia_city_Brisbane, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_city_Brisbane.json" target="_blank">json</a><br />
+Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
+----felhasználók<br />
+BonnieB1_all, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_all.json" target="_blank">json</a><br />
+BonnieB1_completed, <b>updated</b>, <a href="https://www.munzee.com/map/r7hg9jecp/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_completed.json" target="_blank">json</a><br />
+BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7hu62k18/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
+----témák<br />
+Denmark_topic_Zeecret, <b>updated</b>, <a href="https://www.munzee.com/map/u3by0xm2f/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_topic_Zeecret.json" target="_blank">json</a><br />
+USA_topic_KCNightLights, <b>updated</b>, <a href="https://www.munzee.com/map/9yuwp35ek/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_topic_KCNightLights.json" target="_blank">json</a><br />
+<b>stop</b> - 2023.01.13 18:40:55<br />
+összesen 13541<br />
