--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.01.14 01:10:18<br />
+<b>start</b> - 2023.01.14 06:39:22<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.0<br />
@@ -31,7 +31,7 @@ Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
 USA_GreenvilleGreenWave, not updated, 1.0<br />
-Australia_QueensGambit-Horse, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
+Australia_QueensGambit-Horse, not updated, 0.0<br />
 USA_CommerceBarnyard kihagyva (100%), <br />
 USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
@@ -56,7 +56,7 @@ USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
 Hungary_GoatInKecskemet, not updated, 0.6999999999999886<br />
 Hungary_TaskasSmiley, not updated, 0.33112582781457434<br />
-Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
+Germany_Karlsruhe-StadtDesRechts, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
 Slovakia_FlagOfSlovakia, not updated, 0.18999999999999773<br />
 Hungary_SurpriseAirline, not updated, 0.0<br />
 Hungary_RubiksCube, not updated, 0.0<br />
@@ -152,7 +152,7 @@ USA_LakevillesSeaTurtle kihagyva (100%), <br />
 USA_LightningBoltInSapphire kihagyva (100%), <br />
 USA_AppleValley-EvolutionaryFlower, not updated, 1.0<br />
 Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, <b>updated</b>, 766, <a href="https://www.munzee.com/map/udbvv1pgw/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_TampereElectric.json" target="_blank">json</a><br />
+Finland_TampereElectric, not updated, 0.0<br />
 USA_MontgomeryBaseball kihagyva (100%), <br />
 USA_HanksBoots, not updated, 0.0<br />
 USA_ColorTheZoo, not updated, 0.0<br />
@@ -419,7 +419,7 @@ Germany_PatchworkRT, not updated, 0.9099999999999966<br />
 Germany_FlatsAppenzellerRT, not updated, 0.14000000000000057<br />
 Germany_WeddingDay kihagyva (100%), <br />
 Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
-Germany_SportparkEvolutionsRT2, not updated, 0.28999999999999204<br />
+Germany_SportparkEvolutionsRT2, not updated, 0.0<br />
 Germany_Peace, not updated, 0.0<br />
 Germany_PatchworkDusslingen, not updated, 0.0<br />
 USA_MunzeeMania2019, not updated, 0.0<br />
@@ -442,7 +442,7 @@ USA_ChristmasSnowman kihagyva (100%), <br />
 USA_MOAYeti kihagyva (100%), <br />
 USA_MOAFlower kihagyva (100%), <br />
 USA_MOAElectricMonster kihagyva (100%), <br />
-Lithuania_VirusBomb, not updated, 0.0<br />
+Lithuania_VirusBomb, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 0<br />
 Lithuania_KaisiadorysHammer kihagyva (100%), <br />
 Lithuania_KaisiadorysMiniElectric kihagyva (100%), <br />
 Lithuania_KaisiadorysCrossbow kihagyva (100%), <br />
@@ -557,9 +557,4 @@ USA_BlackCat kihagyva (100%), <br />
 USA_CRJonesParkBirthday7 kihagyva (100%), <br />
 USA_NoelridgeMystery kihagyva (100%), <br />
 USA_WestDesMoinesStrawberry, not updated, 0.0<br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2023.01.14 01:47:46<br />
-összesen 2248<br />
+USA_WestDesMoinesShark, <b>updated</b>, 377, <a href="https://www.munzee.com/map/9zmk6hw2m/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WestDesMoinesShark.json" target="_blank">json</a><br />
