--- a/feladat.html
+++ b/feladat.html
@@ -558,3 +558,4 @@ USA_CRJonesParkBirthday7 kihagyva (100%), <br />
 USA_NoelridgeMystery kihagyva (100%), <br />
 USA_WestDesMoinesStrawberry, not updated, 0.0<br />
 USA_WestDesMoinesShark, <b>updated</b>, 377, <a href="https://www.munzee.com/map/9zmk6hw2m/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WestDesMoinesShark.json" target="_blank">json</a><br />
+USA_AltoonaEvos, <b>updated</b>, 98, <a href="https://www.munzee.com/map/9zmsbkdmd/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AltoonaEvos.json" target="_blank">json</a><br />
