--- a/feladat.html
+++ b/feladat.html
@@ -560,3 +560,4 @@ USA_WestDesMoinesStrawberry, not updated, 0.0<br />
 USA_WestDesMoinesShark, <b>updated</b>, 377, <a href="https://www.munzee.com/map/9zmk6hw2m/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WestDesMoinesShark.json" target="_blank">json</a><br />
 USA_AltoonaEvos, <b>updated</b>, 98, <a href="https://www.munzee.com/map/9zmsbkdmd/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AltoonaEvos.json" target="_blank">json</a><br />
 USA_DSMHalloweenWitch, <b>updated</b>, 255, <a href="https://www.munzee.com/map/9zmkmud77/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_DSMHalloweenWitch.json" target="_blank">json</a><br />
+USA_CRFrankenstein, <b>updated</b>, 252, <a href="https://www.munzee.com/map/9zqyb98mv/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRFrankenstein.json" target="_blank">json</a><br />
