--- a/feladat.html
+++ b/feladat.html
@@ -562,3 +562,4 @@ USA_AltoonaEvos, <b>updated</b>, 98, <a href="https://www.munzee.com/map/9zmsbkd
 USA_DSMHalloweenWitch, <b>updated</b>, 255, <a href="https://www.munzee.com/map/9zmkmud77/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_DSMHalloweenWitch.json" target="_blank">json</a><br />
 USA_CRFrankenstein, <b>updated</b>, 252, <a href="https://www.munzee.com/map/9zqyb98mv/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRFrankenstein.json" target="_blank">json</a><br />
 USA_ThomasParkFlats, <b>updated</b>, 355, <a href="https://www.munzee.com/map/9zqz57639/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ThomasParkFlats.json" target="_blank">json</a> <b>100%</b><br />
+USA_IowaGoldfinch, <b>updated</b>, 525, <a href="https://www.munzee.com/map/9zqyb3kzv/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_IowaGoldfinch.json" target="_blank">json</a> <b>100%</b><br />
