--- a/feladat.html
+++ b/feladat.html
@@ -563,3 +563,4 @@ USA_DSMHalloweenWitch, <b>updated</b>, 255, <a href="https://www.munzee.com/map/
 USA_CRFrankenstein, <b>updated</b>, 252, <a href="https://www.munzee.com/map/9zqyb98mv/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRFrankenstein.json" target="_blank">json</a><br />
 USA_ThomasParkFlats, <b>updated</b>, 355, <a href="https://www.munzee.com/map/9zqz57639/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ThomasParkFlats.json" target="_blank">json</a> <b>100%</b><br />
 USA_IowaGoldfinch, <b>updated</b>, 525, <a href="https://www.munzee.com/map/9zqyb3kzv/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_IowaGoldfinch.json" target="_blank">json</a> <b>100%</b><br />
+USA_Minion, <b>updated</b>, 386, <a href="https://www.munzee.com/map/9zvwtc1re/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Minion.json" target="_blank">json</a> <b>100%</b><br />
