--- a/feladat.html
+++ b/feladat.html
@@ -564,3 +564,4 @@ USA_CRFrankenstein, <b>updated</b>, 252, <a href="https://www.munzee.com/map/9zq
 USA_ThomasParkFlats, <b>updated</b>, 355, <a href="https://www.munzee.com/map/9zqz57639/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ThomasParkFlats.json" target="_blank">json</a> <b>100%</b><br />
 USA_IowaGoldfinch, <b>updated</b>, 525, <a href="https://www.munzee.com/map/9zqyb3kzv/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_IowaGoldfinch.json" target="_blank">json</a> <b>100%</b><br />
 USA_Minion, <b>updated</b>, 386, <a href="https://www.munzee.com/map/9zvwtc1re/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Minion.json" target="_blank">json</a> <b>100%</b><br />
+USA_FarmingtonTiger, <b>updated</b>, 99, <a href="https://www.munzee.com/map/9zvy07ef6/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FarmingtonTiger.json" target="_blank">json</a><br />
