--- a/feladat.html
+++ b/feladat.html
@@ -566,3 +566,4 @@ USA_IowaGoldfinch, <b>updated</b>, 525, <a href="https://www.munzee.com/map/9zqy
 USA_Minion, <b>updated</b>, 386, <a href="https://www.munzee.com/map/9zvwtc1re/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Minion.json" target="_blank">json</a> <b>100%</b><br />
 USA_FarmingtonTiger, <b>updated</b>, 99, <a href="https://www.munzee.com/map/9zvy07ef6/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FarmingtonTiger.json" target="_blank">json</a><br />
 USA_CedarRapidsPumpkin, <b>updated</b>, 892, <a href="https://www.munzee.com/map/9zqyb9s0m/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CedarRapidsPumpkin.json" target="_blank">json</a> <b>100%</b><br />
+USA_PuppyPlayPen, <b>updated</b>, 30, <a href="https://www.munzee.com/map/9zvz1pm3j/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PuppyPlayPen.json" target="_blank">json</a><br />
