--- a/feladat.html
+++ b/feladat.html
@@ -570,3 +570,14 @@ USA_PuppyPlayPen, <b>updated</b>, 30, <a href="https://www.munzee.com/map/9zvz1p
 USA_Burger, <b>updated</b>, 303, <a href="https://www.munzee.com/map/9zvwdxwy6/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Burger.json" target="_blank">json</a> <b>100%</b><br />
 USA_Pizza, <b>updated</b>, 196, <a href="https://www.munzee.com/map/9zvwf8p7n/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Pizza.json" target="_blank">json</a> <b>100%</b><br />
 USA_StormtrooperSavage, <b>updated</b>, 196, <a href="https://www.munzee.com/map/9zvwdyw64/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StormtrooperSavage.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+USA_city_CedarRapids, <b>updated</b>, <a href="https://www.munzee.com/map/9zqyb3kzv/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_CedarRapids.json" target="_blank">json</a><br />
+----felhasználók<br />
+rodrico101_all, <b>updated</b>, <a href="https://www.munzee.com/map/9zqz5kqsw/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/rodrico101_all.json" target="_blank">json</a><br />
+rodrico101_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/9zqyb9s0m/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/rodrico101_GOTM.json" target="_blank">json</a><br />
+rodrico101_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9zqydku0v/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/rodrico101_completed.json" target="_blank">json</a><br />
+rodrico101_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9zqyb98mv/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/rodrico101_empty.json" target="_blank">json</a><br />
+----témák<br />
+<b>stop</b> - 2023.01.14 08:12:47<br />
+összesen 5604<br />
