--- a/feladat.html
+++ b/feladat.html
@@ -223,3 +223,196 @@ Hungary_TocoskertsArrows3, not updated, 0.0<br />
 Hungary_60Color kihagyva (100%), <br />
 Hungary_Cata-Joy kihagyva (100%), <br />
 Hungary_FlatDebrecen, <b>updated</b>, 255, <a href="https://www.munzee.com/map/u2rqk56jy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_FlatDebrecen.json" target="_blank">json</a><br />
+Hungary_Debrecen2202, not updated, 0.0<br />
+Hungary_EvolutionDebrecen kihagyva (100%), <br />
+Hungary_JewelSandwich, not updated, 0.0<br />
+Hungary_Cimbi kihagyva (100%), <br />
+Hungary_Picu kihagyva (100%), <br />
+Hungary_Honey kihagyva (100%), <br />
+Hungary_QR kihagyva (100%), <br />
+Hungary_DebreceniKereszt kihagyva (100%), <br />
+Hungary_60Flat kihagyva (100%), <br />
+UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
+UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
+UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
+UnitedKingdom_HeathrowFlatSquares, not updated, 0.519999999999996<br />
+UnitedKingdom_LondonUnderground, not updated, 0.0<br />
+UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
+UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
+UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
+UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
+UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
+UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
+UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
+UnitedKingdom_ShadesGarden kihagyva (100%), <br />
+UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.0<br />
+UnitedKingdom_SailingBoat kihagyva (100%), <br />
+UnitedKingdom_HendonCircle kihagyva (100%), <br />
+Australia_9thBirthdayInQueensland kihagyva (100%), <br />
+Australia_MayPole kihagyva (100%), <br />
+Australia_PyramidOBadges kihagyva (100%), <br />
+Australia_QLD-Dingo kihagyva (100%), <br />
+Australia_HappyTenMunzee kihagyva (100%), <br />
+Australia_QLDPerm-Temp, not updated, -42.0<br />
+Australia_UnicornInThePark kihagyva (100%), <br />
+Germany_Berlin-HighVoltage kihagyva (100%), <br />
+Germany_ColoursOfBerlin kihagyva (100%), <br />
+Germany_9thBirthdayInBerlin kihagyva (100%), <br />
+Germany_EvoInBerlinSteglitz kihagyva (100%), <br />
+Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
+Hungary_Debrecen kihagyva (100%), <br />
+Hungary_DeoCachingClan kihagyva (100%), <br />
+Hungary_TocoskertsArrows kihagyva (100%), <br />
+UnitedKingdom_WoodlandAnimals-Fox, not updated, 0.0<br />
+UnitedKingdom_WoodlandAnimals-Badger, not updated, 0.0<br />
+Canada_OttawaCancerRibbon kihagyva (100%), <br />
+Canada_OttawaGoldfish kihagyva (100%), <br />
+Canada_BananaBread kihagyva (100%), <br />
+Canada_Elephriends kihagyva (100%), <br />
+Canada_LizzysUnicorn kihagyva (100%), <br />
+Canada_JeffsFarm kihagyva (100%), <br />
+UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
+Germany_JohnTheFab41 kihagyva (100%), <br />
+Germany_RingoTheFab4, not updated, 0.0<br />
+Germany_GeorgeTheFab42, not updated, 1.0<br />
+Germany_PaulTheFab43, not updated, 0.9299999999999926<br />
+Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
+Hungary_MaXGarden kihagyva (100%), <br />
+Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
+Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
+Hungary_SZTE, not updated, -38.85<br />
+Hungary_MarioInVac, not updated, 0.0<br />
+Hungary_LovagokKertje kihagyva (100%), <br />
+Hungary_ShieldKecskemet, not updated, 0.0<br />
+Hungary_Mini kihagyva (100%), <br />
+Hungary_MinimalIceCubeInBaja kihagyva (100%), <br />
+Hungary_SailboatAtLakeBalaton, not updated, 0.0<br />
+Hungary_EyesInTheNight kihagyva (100%), <br />
+Hungary_PomazLocomotiv kihagyva (100%), <br />
+Slovakia_Bratislava kihagyva (100%), <br />
+Slovakia_ChilliKiller, not updated, 0.0<br />
+Slovakia_LakeLighthousePainting, not updated, 0.0<br />
+Slovakia_ChargeBratislava kihagyva (100%), <br />
+Slovakia_VirtualJoy kihagyva (100%), <br />
+Slovakia_ElectricLetters kihagyva (100%), <br />
+Slovakia_DevinCastle kihagyva (100%), <br />
+Slovakia_EvoFlowerBratislava kihagyva (100%), <br />
+Slovakia_1stDayEvo kihagyva (100%), <br />
+Slovakia_BosniaFlagInBratislava kihagyva (100%), <br />
+Slovakia_AgentSun kihagyva (100%), <br />
+Slovakia_CandleTombstone kihagyva (100%), <br />
+Canada_SecretLantern kihagyva (100%), <br />
+Canada_OttawaCross kihagyva (100%), <br />
+Canada_MysteryBoat kihagyva (100%), <br />
+Canada_SaveTheMonarchs kihagyva (100%), <br />
+Canada_FlutteringByOrleans kihagyva (100%), <br />
+Canada_MunzeeViolin kihagyva (100%), <br />
+Canada_MysteryKeyboard kihagyva (100%), <br />
+Canada_MunzeeDrumSet kihagyva (100%), <br />
+Canada_MunzeeGuitar kihagyva (100%), <br />
+Canada_MunzeeTrumpet kihagyva (100%), <br />
+Canada_OttawaLeprechaun kihagyva (100%), <br />
+Canada_SandcastleFun kihagyva (100%), <br />
+Canada_OttawaTornado kihagyva (100%), <br />
+Canada_MunzeeSnowglobe kihagyva (100%), <br />
+Canada_RainbowStar kihagyva (100%), <br />
+Canada_TheSecretEgg kihagyva (100%), <br />
+Canada_JimmysTractor kihagyva (100%), <br />
+Canada_BeeStrongJeffeth kihagyva (100%), <br />
+Canada_JimmysDog kihagyva (100%), <br />
+Canada_JimmysBoat kihagyva (100%), <br />
+Canada_LizzysKitty kihagyva (100%), <br />
+Canada_RocklandEasterEggs kihagyva (100%), <br />
+Canada_ClairesCake kihagyva (100%), <br />
+Canada_StanleyForDad kihagyva (100%), <br />
+Canada_RocklandTree kihagyva (100%), <br />
+Canada_JimmysRocket kihagyva (100%), <br />
+Canada_BreadInRockland kihagyva (100%), <br />
+Canada_MarchingFlats kihagyva (100%), <br />
+Canada_RocklandHeart kihagyva (100%), <br />
+Canada_LizzysElephant kihagyva (100%), <br />
+Canada_AdventuresInRockland kihagyva (100%), <br />
+Canada_SecretLove kihagyva (100%), <br />
+Canada_LizzysGoldfish kihagyva (100%), <br />
+Belgium_StroopwafelInvasionInVosselaar kihagyva (100%), <br />
+Australia_StroopwafelInvasionInShepparton kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInAndover, not updated, 0.0<br />
+Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
+USA_StroopwafelInvasionInFallingWaters, not updated, 0.0<br />
+USA_StroopwafelInvasionInHagerstown, not updated, 0.0<br />
+Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
+UnitedKingdom_StroopwafelInvasionInKingswood, not updated, 0.0<br />
+Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
+Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
+Canada_StroopwafelInvasionInNewWestminster, not updated, 0.0<br />
+Australia_StroopwafelInvasionInNorlane, not updated, 0.0<br />
+Netherlands_StroopwafelInvasionInOspel, not updated, 0.0<br />
+UnitedKingdom_StroopwafelInvasionInThringstone, not updated, 0.0<br />
+Australia_StroopwafelInvasionInWonthaggi, not updated, 0.0<br />
+Netherlands_StroopwafelInvasionInArnhem kihagyva (100%), <br />
+Germany_StroopwafelInvasionInBerlin kihagyva (100%), <br />
+Canada_StroopwafelInvasionInBrossard kihagyva (100%), <br />
+Australia_StroopwafelInvasionInBrownsPlains kihagyva (100%), <br />
+Germany_StroopwafelInvasionInChemnitz kihagyva (100%), <br />
+USA_StroopwafelInvasionInDesertLodge kihagyva (100%), <br />
+USA_StroopwafelInvasionInEscondido kihagyva (100%), <br />
+Canada_StroopwafelInvasionInGeorgetown kihagyva (100%), <br />
+USA_StroopwafelInvasionInGlenOaks kihagyva (100%), <br />
+Sweden_StroopwafelInvasionInGotenborg kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGouda kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGroningen kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInHoofddorp kihagyva (100%), <br />
+USA_StroopwafelInvasionInMHQ kihagyva (100%), <br />
+Australia_StroopwafelInvasionInMorayfield kihagyva (100%), <br />
+Australia_StroopwafelInvasionInOnkaparingaHills kihagyva (100%), <br />
+Australia_StroopwafelInvasionInPerth kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInPlympton kihagyva (100%), <br />
+USA_StroopwafelInvasionInRaleigh kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInBedford kihagyva (100%), <br />
+USA_MHQBash4Casino kihagyva (100%), <br />
+USA_MHQV4Pin kihagyva (100%), <br />
+USA_ZeeKnight, not updated, 0.0<br />
+USA_MichaelMyersHalloween, not updated, 0.0<br />
+USA_MunzeeLogoHistory2011, not updated, 0.0<br />
+USA_MunzeeLogoHistory2013 kihagyva (100%), <br />
+USA_MunzeeLogoHistory2014, not updated, 0.0<br />
+USA_MunzeeLogoHistory2015, not updated, 0.0<br />
+USA_PiratesFlag kihagyva (100%), <br />
+USA_Zelda, not updated, 0.0<br />
+USA_TeenageMutantNinjaTurtles, not updated, 0.0<br />
+Germany_FBombBerlin kihagyva (100%), <br />
+Hungary_FBombBudapest kihagyva (100%), <br />
+USA_FBombCedarRapids kihagyva (100%), <br />
+Denmark_FBombHammel kihagyva (100%), <br />
+USA_FBombMcKinney kihagyva (100%), <br />
+USA_FBombTampa kihagyva (100%), <br />
+USA_RoverPin, not updated, 0.0<br />
+USA_EmeraldInAnchorage kihagyva (100%), <br />
+USA_EmeraldInChesterfield kihagyva (100%), <br />
+USA_EmeraldInMcKinney kihagyva (100%), <br />
+Australia_EmeraldInMelbourne kihagyva (100%), <br />
+UnitedKingdom_EmeraldInGreenwich kihagyva (100%), <br />
+Australia_EmeraldInSydney kihagyva (100%), <br />
+BosniaHerzegovina_PanonskaJezeraTuzla, not updated, 0.0<br />
+Serbia_JapanseMaple kihagyva (100%), <br />
+Greece_TheLighthouseOfChania kihagyva (100%), <br />
+Jersey_JerzeeClan, not updated, 0.0<br />
+Jersey_JerseyColorPaw, not updated, 0.0<br />
+Jersey_StOuen kihagyva (100%), <br />
+Portugal_MadeiraMonumental kihagyva (100%), <br />
+Portugal_LargoDaPaz kihagyva (100%), <br />
+Portugal_1MadeiraSapphiresTwin kihagyva (100%), <br />
+Portugal_Portinho kihagyva (100%), <br />
+Croatia_CroatiaLocketHeart, not updated, 0.0<br />
+Greece_Zakynthos, not updated, 0.0<br />
+Portugal_PortoNovoHighVoltage, not updated, 0.0<br />
+Portugal_HighVoltageMadeiraIslandFirst kihagyva (100%), <br />
+Portugal_HighVoltageMadeiraIslandBlack kihagyva (100%), <br />
+UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
+France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
+Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
+USA_MOAChristmasCard kihagyva (100%), <br />
+Germany_AreYouXZeePerienced, not updated, 0.0<br />
+Germany_MixedGardenRT kihagyva (100%), <br />
+Germany_AppenzellerSennenhundRT, not updated, 0.11000000000000298<br />
+Germany_PatchworkRT, <b>updated</b>, 1083, <a href="https://www.munzee.com/map/u0wec7dyv/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_PatchworkRT.json" target="_blank">json</a><br />
