--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.01.16 01:10:13<br />
+<b>start</b> - 2023.01.17 01:10:23<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.0<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.5399999999999991<br />
-Hungary_VotiveChurch, not updated, -36.71000000000001<br />
+Hungary_VotiveChurch, not updated, -36.67000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -42,7 +42,7 @@ Spain_WineOClock kihagyva (100%), <br />
 Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
-USA_USMGoldenEagles, <b>updated</b>, 225, <a href="https://www.munzee.com/map/dj86pp7dz/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_USMGoldenEagles.json" target="_blank">json</a><br />
+USA_USMGoldenEagles, not updated, 0.0<br />
 USA_Turtle, not updated, 0.0<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
@@ -152,7 +152,7 @@ USA_LakevillesSeaTurtle kihagyva (100%), <br />
 USA_LightningBoltInSapphire kihagyva (100%), <br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.0<br />
 Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, not updated, 0.0<br />
+Finland_TampereElectric, not updated, 0.332225913621258<br />
 USA_MontgomeryBaseball kihagyva (100%), <br />
 USA_HanksBoots, not updated, 0.0<br />
 USA_ColorTheZoo, not updated, 0.0<br />
@@ -222,7 +222,7 @@ Hungary_TocoskertsArrows2 kihagyva (100%), <br />
 Hungary_TocoskertsArrows3, not updated, 0.0<br />
 Hungary_60Color kihagyva (100%), <br />
 Hungary_Cata-Joy kihagyva (100%), <br />
-Hungary_FlatDebrecen, <b>updated</b>, 255, <a href="https://www.munzee.com/map/u2rqk56jy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_FlatDebrecen.json" target="_blank">json</a><br />
+Hungary_FlatDebrecen, not updated, 1.0<br />
 Hungary_Debrecen2202, not updated, 0.0<br />
 Hungary_EvolutionDebrecen kihagyva (100%), <br />
 Hungary_JewelSandwich, not updated, 0.0<br />
@@ -414,8 +414,8 @@ Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard kihagyva (100%), <br />
 Germany_AreYouXZeePerienced, not updated, 0.0<br />
 Germany_MixedGardenRT kihagyva (100%), <br />
-Germany_AppenzellerSennenhundRT, not updated, 0.11000000000000298<br />
-Germany_PatchworkRT, <b>updated</b>, 1083, <a href="https://www.munzee.com/map/u0wec7dyv/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_PatchworkRT.json" target="_blank">json</a><br />
+Germany_AppenzellerSennenhundRT, not updated, 0.1700000000000017<br />
+Germany_PatchworkRT, not updated, 0.060000000000002274<br />
 Germany_FlatsAppenzellerRT, not updated, 0.269999999999996<br />
 Germany_WeddingDay kihagyva (100%), <br />
 Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
@@ -570,11 +570,5 @@ USA_PuppyPlayPen, not updated, 0.0<br />
 USA_Burger kihagyva (100%), <br />
 USA_Pizza kihagyva (100%), <br />
 USA_StormtrooperSavage kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-Hungary_city_Debrecen, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqs2c96/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Debrecen.json" target="_blank">json</a><br />
-----felhasználók<br />
-Norbee97_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2rq7fsvq/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_empty.json" target="_blank">json</a><br />
-----témák<br />
-<b>stop</b> - 2023.01.16 01:55:49<br />
-összesen 2735<br />
+<b>stop</b> - 2023.01.17 01:29:16<br />
+összesen 1133<br />
