--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.01.17 01:10:23<br />
+<b>start</b> - 2023.01.17 14:37:26<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.0<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.5399999999999991<br />
-Hungary_VotiveChurch, not updated, -36.67000000000001<br />
+Hungary_VotiveChurch, not updated, -36.63000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -179,7 +179,7 @@ Germany_BerlinMunzeePin, not updated, 0.13000000000000256<br />
 Germany_DiamantBerlin, not updated, 0.0<br />
 Germany_BerlinBear, not updated, 0.0<br />
 Germany_HonowWappen, not updated, 0.3355704697986539<br />
-Canada_GatineauEvo, not updated, 0.0<br />
+Canada_GatineauEvo, not updated, 0.37999999999999545<br />
 Germany_ColorsBonn kihagyva (100%), <br />
 Germany_BTHVN2020 kihagyva (100%), <br />
 Canada_GatineauScarletTulip kihagyva (100%), <br />
@@ -280,7 +280,7 @@ Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
 Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
-Hungary_SZTE, not updated, -38.85<br />
+Hungary_SZTE, not updated, -38.43<br />
 Hungary_MarioInVac, not updated, 0.0<br />
 Hungary_LovagokKertje kihagyva (100%), <br />
 Hungary_ShieldKecskemet, not updated, 0.0<br />
@@ -415,7 +415,7 @@ USA_MOAChristmasCard kihagyva (100%), <br />
 Germany_AreYouXZeePerienced, not updated, 0.0<br />
 Germany_MixedGardenRT kihagyva (100%), <br />
 Germany_AppenzellerSennenhundRT, not updated, 0.1700000000000017<br />
-Germany_PatchworkRT, not updated, 0.060000000000002274<br />
+Germany_PatchworkRT, not updated, 0.18999999999999773<br />
 Germany_FlatsAppenzellerRT, not updated, 0.269999999999996<br />
 Germany_WeddingDay kihagyva (100%), <br />
 Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
@@ -431,144 +431,4 @@ Germany_AdlerKatapulte, not updated, 0.6799999999999926<br />
 USA_SuperChuckerShield kihagyva (100%), <br />
 USA_DogDaysOfSummer kihagyva (100%), <br />
 USA_GingerbreadMan_Edina kihagyva (100%), <br />
-USA_NEOneAlien, not updated, 0.0<br />
-USA_ComoEvoFlowers kihagyva (100%), <br />
-USA_WitchHat, not updated, 0.0<br />
-USA_LRTEVOTrain, not updated, 0.0<br />
-USA_JackOZEEacula kihagyva (100%), <br />
-USA_Minnesota kihagyva (100%), <br />
-USA_MinnesotaMoose kihagyva (100%), <br />
-USA_ChristmasSnowman kihagyva (100%), <br />
-USA_MOAYeti kihagyva (100%), <br />
-USA_MOAFlower kihagyva (100%), <br />
-USA_MOAElectricMonster kihagyva (100%), <br />
-Lithuania_VirusBomb, not updated, 0.0<br />
-Lithuania_KaisiadorysHammer kihagyva (100%), <br />
-Lithuania_KaisiadorysMiniElectric kihagyva (100%), <br />
-Lithuania_KaisiadorysCrossbow kihagyva (100%), <br />
-Lithuania_BalticWay30 kihagyva (100%), <br />
-Austria_FrauenkirchenOwl, not updated, 0.0<br />
-Slovakia_SpaceInvaderPrievidza kihagyva (100%), <br />
-Lithuania_KaunasGreenLeaf kihagyva (100%), <br />
-Lithuania_KaunasScatter1 kihagyva (100%), <br />
-Lithuania_KaunasScatter2, not updated, 0.0<br />
-Lithuania_KaunasLightning, not updated, 0.0<br />
-Lithuania_RotusesSquareKaunas kihagyva (100%), <br />
-Lithuania_PistachioIceCreamInKaunas kihagyva (100%), <br />
-Lithuania_KaunasMagnet, not updated, 0.0<br />
-Lithuania_FebruaryEvent, not updated, 0.0<br />
-USA_TheLuckyFungi kihagyva (100%), <br />
-USA_SunAndMoon, not updated, 0.0<br />
-USA_LexingtonSurprise, not updated, 0.0<br />
-Australia_BrisbaneHeartPopUp kihagyva (100%), <br />
-Australia_QldJacaranda kihagyva (100%), <br />
-Australia_FairyWren kihagyva (100%), <br />
-Germany_BerlinCardsPin kihagyva (100%), <br />
-Germany_Pretzel kihagyva (100%), <br />
-Germany_AdventurePortal2, not updated, 0.0<br />
-Germany_BerlinVoidMapleChess, not updated, 0.0<br />
-Germany_SweetHeart kihagyva (100%), <br />
-Germany_WittenauerMischMasch, not updated, 0.0<br />
-Germany_BerlinBYOG2020 kihagyva (100%), <br />
-Germany_MarzahnerBockwindmuhle kihagyva (100%), <br />
-Germany_GermanHeart kihagyva (100%), <br />
-Australia_RUMportal kihagyva (100%), <br />
-Australia_MiniPortal1 kihagyva (100%), <br />
-Denmark_MiniPortal2 kihagyva (100%), <br />
-Germany_MattPin kihagyva (100%), <br />
-Germany_CrossbowShield kihagyva (100%), <br />
-Germany_FlatLouPin kihagyva (100%), <br />
-Germany_FlatHammockPin kihagyva (100%), <br />
-Germany_FlatRobPin kihagyva (100%), <br />
-Germany_CrossbowPin kihagyva (100%), <br />
-Germany_MysteryPin kihagyva (100%), <br />
-Germany_GreeniePin kihagyva (100%), <br />
-Germany_SperenbergTeddy kihagyva (100%), <br />
-Germany_LogoOfGermanSoccerClub, not updated, 0.0<br />
-Germany_ErnieInVolksdorf, not updated, 0.0<br />
-Germany_Quietscheentchen kihagyva (100%), <br />
-Germany_Hammaburg, not updated, 0.0<br />
-Germany_FCStPauli, not updated, 0.0<br />
-Germany_YinYangNeustadt, not updated, 0.0<br />
-Denmark_TheRainbowwaveInHillested, not updated, 0.0<br />
-Denmark_SoparkenMaribo kihagyva (100%), <br />
-Denmark_NonneMaribo kihagyva (100%), <br />
-Denmark_ZeecretSundby kihagyva (100%), <br />
-Denmark_FjerNykobing, not updated, 0.060000000000002274<br />
-Denmark_SpejdernesLejr2022, not updated, 0.0<br />
-Denmark_JuletraeIViby kihagyva (100%), <br />
-Denmark_ZeecretViby kihagyva (100%), <br />
-Denmark_NVGogglesSoro kihagyva (100%), <br />
-Denmark_ZeecretFrederiksberg kihagyva (100%), <br />
-Denmark_DetSpogerIHaslev kihagyva (100%), <br />
-Denmark_ZeecretFensmark kihagyva (100%), <br />
-Denmark_FlatFensmark kihagyva (100%), <br />
-Denmark_ZeecretAppenaes kihagyva (100%), <br />
-Denmark_ZeecretHilleroed kihagyva (100%), <br />
-Denmark_FlatSquare kihagyva (100%), <br />
-USA_HotelEvo kihagyva (100%), <br />
-USA_Emoji, not updated, 0.0<br />
-USA_ElectricJHawk, not updated, 0.0<br />
-USA_DesMoinesGreetingCards, not updated, 0.0<br />
-USA_KCNightLights1 kihagyva (100%), <br />
-USA_KCNightLights2 kihagyva (100%), <br />
-USA_KCNightLights3 kihagyva (100%), <br />
-USA_KCNightLights4 kihagyva (100%), <br />
-USA_KCNightLights5 kihagyva (100%), <br />
-USA_KansasCityPanda, not updated, 0.0<br />
-USA_ResearchHospital kihagyva (100%), <br />
-USA_KCAmericanFlag kihagyva (100%), <br />
-USA_KauffmanLegacyParkQuilt kihagyva (100%), <br />
-USA_KCEgyptianZodiacExpanded kihagyva (100%), <br />
-USA_Marion kihagyva (100%), <br />
-USA_Dragonfly, not updated, 0.0<br />
-USA_ElectricalEvolution, not updated, 0.0<br />
-USA_CFPumpkin, not updated, 0.0<br />
-USA_Marion4LeafClover kihagyva (100%), <br />
-USA_Popcorn, not updated, 0.0<br />
-USA_UnofficialCREvo, not updated, 0.0<br />
-USA_CRElectricMystery kihagyva (100%), <br />
-USA_CRHolidayPizza kihagyva (100%), <br />
-USA_CRRose kihagyva (100%), <br />
-USA_CRHonorCross kihagyva (100%), <br />
-USA_WatertownShammy kihagyva (100%), <br />
-USA_CatapultPit kihagyva (100%), <br />
-USA_Crossbow, not updated, 0.0<br />
-USA_BowlingBash kihagyva (100%), <br />
-USA_AtlanticDuck, not updated, 0.0<br />
-USA_80sCube kihagyva (100%), <br />
-USA_CRSubmarine kihagyva (100%), <br />
-USA_IowaVeteransCemetery, not updated, 0.0<br />
-USA_SchildbergsDuckWalk kihagyva (100%), <br />
-USA_CRVegetable kihagyva (100%), <br />
-USA_CedarRapidsBarnyard kihagyva (100%), <br />
-UnitedKingdom_JanuaryGarden2022 kihagyva (100%), <br />
-USA_CRFarmersField kihagyva (100%), <br />
-USA_CRMuscleCar kihagyva (100%), <br />
-USA_JacobLLoosePark kihagyva (100%), <br />
-USA_CRSafari kihagyva (100%), <br />
-USA_CRApril kihagyva (100%), <br />
-USA_PicassoRob kihagyva (100%), <br />
-USA_CRFlatMattLovesBaseball kihagyva (100%), <br />
-USA_FlatRobBirthday kihagyva (100%), <br />
-USA_WestDesMoinesPacMan, not updated, 0.0<br />
-USA_CRFeather kihagyva (100%), <br />
-USA_BlackCat kihagyva (100%), <br />
-USA_CRJonesParkBirthday7 kihagyva (100%), <br />
-USA_NoelridgeMystery kihagyva (100%), <br />
-USA_WestDesMoinesStrawberry, not updated, 0.0<br />
-USA_WestDesMoinesShark, not updated, 0.0<br />
-USA_AltoonaEvos, not updated, 0.0<br />
-USA_DSMHalloweenWitch, not updated, 0.0<br />
-USA_CRFrankenstein, not updated, 0.0<br />
-USA_ThomasParkFlats kihagyva (100%), <br />
-USA_IowaGoldfinch kihagyva (100%), <br />
-USA_Minion kihagyva (100%), <br />
-USA_FarmingtonTiger, not updated, 0.0<br />
-USA_CedarRapidsPumpkin kihagyva (100%), <br />
-USA_PuppyPlayPen, not updated, 0.0<br />
-USA_Burger kihagyva (100%), <br />
-USA_Pizza kihagyva (100%), <br />
-USA_StormtrooperSavage kihagyva (100%), <br />
-<b>stop</b> - 2023.01.17 01:29:16<br />
-összesen 1133<br />
+USA_NEOneAlien, <b>updated</b>, 262, <a href="https://www.munzee.com/map/cbj8nmyg8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_NEOneAlien.json" target="_blank">json</a><br />
