--- a/feladat.html
+++ b/feladat.html
@@ -571,3 +571,4 @@ USA_Burger kihagyva (100%), <br />
 USA_Pizza kihagyva (100%), <br />
 USA_StormtrooperSavage kihagyva (100%), <br />
 USA_Snoopy, <b>updated</b>, 317, <a href="https://www.munzee.com/map/9zvwdyxm6/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Snoopy.json" target="_blank">json</a> <b>100%</b><br />
+USA_JordanJ, <b>updated</b>, 292, <a href="https://www.munzee.com/map/9zvqj15c7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_JordanJ.json" target="_blank">json</a> <b>100%</b><br />
