--- a/feladat.html
+++ b/feladat.html
@@ -574,3 +574,4 @@ USA_Snoopy, <b>updated</b>, 317, <a href="https://www.munzee.com/map/9zvwdyxm6/1
 USA_JordanJ, <b>updated</b>, 292, <a href="https://www.munzee.com/map/9zvqj15c7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_JordanJ.json" target="_blank">json</a> <b>100%</b><br />
 USA_Tulip, <b>updated</b>, 151, <a href="https://www.munzee.com/map/9zvqj7tzx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Tulip.json" target="_blank">json</a> <b>100%</b><br />
 USA_MOAMNCrossbow, <b>updated</b>, 760, <a href="https://www.munzee.com/map/9zvxn5bhq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAMNCrossbow.json" target="_blank">json</a> <b>100%</b><br />
+USA_MinnesotaM, <b>updated</b>, 353, <a href="https://www.munzee.com/map/9zvx4j90x/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MinnesotaM.json" target="_blank">json</a> <b>100%</b><br />
