--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.01.17 14:37:26<br />
+<b>start</b> - 2023.01.17 16:39:36<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.0<br />
@@ -431,7 +431,7 @@ Germany_AdlerKatapulte, not updated, 0.6799999999999926<br />
 USA_SuperChuckerShield kihagyva (100%), <br />
 USA_DogDaysOfSummer kihagyva (100%), <br />
 USA_GingerbreadMan_Edina kihagyva (100%), <br />
-USA_NEOneAlien, <b>updated</b>, 262, <a href="https://www.munzee.com/map/cbj8nmyg8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_NEOneAlien.json" target="_blank">json</a><br />
+USA_NEOneAlien, not updated, 0.0<br />
 USA_ComoEvoFlowers kihagyva (100%), <br />
 USA_WitchHat, not updated, 0.0<br />
 USA_LRTEVOTrain, not updated, 0.0<br />
@@ -570,17 +570,19 @@ USA_PuppyPlayPen, not updated, 0.0<br />
 USA_Burger kihagyva (100%), <br />
 USA_Pizza kihagyva (100%), <br />
 USA_StormtrooperSavage kihagyva (100%), <br />
-USA_Snoopy, <b>updated</b>, 317, <a href="https://www.munzee.com/map/9zvwdyxm6/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Snoopy.json" target="_blank">json</a> <b>100%</b><br />
-USA_JordanJ, <b>updated</b>, 292, <a href="https://www.munzee.com/map/9zvqj15c7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_JordanJ.json" target="_blank">json</a> <b>100%</b><br />
-USA_Tulip, <b>updated</b>, 151, <a href="https://www.munzee.com/map/9zvqj7tzx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Tulip.json" target="_blank">json</a> <b>100%</b><br />
-USA_MOAMNCrossbow, <b>updated</b>, 760, <a href="https://www.munzee.com/map/9zvxn5bhq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAMNCrossbow.json" target="_blank">json</a> <b>100%</b><br />
-USA_MinnesotaM, <b>updated</b>, 353, <a href="https://www.munzee.com/map/9zvx4j90x/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MinnesotaM.json" target="_blank">json</a> <b>100%</b><br />
-USA_HiawathaCrossbows, <b>updated</b>, 170, <a href="https://www.munzee.com/map/9zvxwmgw4/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HiawathaCrossbows.json" target="_blank">json</a> <b>100%</b><br />
-USA_SuperBowlLII, <b>updated</b>, 535, <a href="https://www.munzee.com/map/9zvxy0n58/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SuperBowlLII.json" target="_blank">json</a> <b>100%</b><br />
-USA_EaglesVPatriots, <b>updated</b>, 557, <a href="https://www.munzee.com/map/9zvxy0jfp/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_EaglesVPatriots.json" target="_blank">json</a> <b>100%</b><br />
-USA_StMarysBattlegroundWeapon, <b>updated</b>, 913, <a href="https://www.munzee.com/map/9zvxtcg21/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StMarysBattlegroundWeapon.json" target="_blank">json</a> <b>100%</b><br />
-USA_LRTSnowflake, <b>updated</b>, 78, <a href="https://www.munzee.com/map/9zvxz44h1/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LRTSnowflake.json" target="_blank">json</a> <b>100%</b><br />
-USA_HeartCrossbows, <b>updated</b>, 139, <a href="https://www.munzee.com/map/9zvxxuuu3/14.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HeartCrossbows.json" target="_blank">json</a> <b>100%</b><br />
-USA_ComoParkShamrockWhite, <b>updated</b>, 137, <a href="https://www.munzee.com/map/9zvzb7crp/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ComoParkShamrockWhite.json" target="_blank">json</a> <b>100%</b><br />
-USA_ComoParkShamrockBlue, <b>updated</b>, 279, <a href="https://www.munzee.com/map/9zvzb7crp/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ComoParkShamrockBlue.json" target="_blank">json</a><br />
-USA_StPaulShamrock, <b>updated</b>, 151, <a href="https://www.munzee.com/map/9zvz9m4w8/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StPaulShamrock.json" target="_blank">json</a> <b>100%</b><br />
+USA_Snoopy kihagyva (100%), <br />
+USA_JordanJ kihagyva (100%), <br />
+USA_Tulip kihagyva (100%), <br />
+USA_MOAMNCrossbow kihagyva (100%), <br />
+USA_MinnesotaM kihagyva (100%), <br />
+USA_HiawathaCrossbows kihagyva (100%), <br />
+USA_SuperBowlLII kihagyva (100%), <br />
+USA_EaglesVPatriots kihagyva (100%), <br />
+USA_StMarysBattlegroundWeapon kihagyva (100%), <br />
+USA_LRTSnowflake kihagyva (100%), <br />
+USA_HeartCrossbows kihagyva (100%), <br />
+USA_ComoParkShamrockWhite kihagyva (100%), <br />
+USA_ComoParkShamrockBlue, not updated, 0.0<br />
+USA_StPaulShamrock kihagyva (100%), <br />
+USA_BirthdayClown kihagyva (100%), <br />
+USA_LongLakeButterflies, <b>updated</b>, 308, <a href="https://www.munzee.com/map/cbj8rkf6w/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LongLakeButterflies.json" target="_blank">json</a> <b>100%</b><br />
