--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.01.17 16:39:36<br />
+<b>start</b> - 2023.01.17 17:25:36<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.0<br />
@@ -585,4 +585,6 @@ USA_ComoParkShamrockWhite kihagyva (100%), <br />
 USA_ComoParkShamrockBlue, not updated, 0.0<br />
 USA_StPaulShamrock kihagyva (100%), <br />
 USA_BirthdayClown kihagyva (100%), <br />
-USA_LongLakeButterflies, <b>updated</b>, 308, <a href="https://www.munzee.com/map/cbj8rkf6w/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LongLakeButterflies.json" target="_blank">json</a> <b>100%</b><br />
+USA_LongLakeButterflies kihagyva (100%), <br />
+USA_FleurDeLis, not updated, 0.0<br />
+USA_HutchinsonSnowflake, <b>updated</b>, 120, <a href="https://www.munzee.com/map/9zuzkev75/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HutchinsonSnowflake.json" target="_blank">json</a> <b>100%</b><br />
