--- a/feladat.html
+++ b/feladat.html
@@ -588,3 +588,4 @@ USA_BirthdayClown kihagyva (100%), <br />
 USA_LongLakeButterflies kihagyva (100%), <br />
 USA_FleurDeLis, not updated, 0.0<br />
 USA_HutchinsonSnowflake, <b>updated</b>, 120, <a href="https://www.munzee.com/map/9zuzkev75/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HutchinsonSnowflake.json" target="_blank">json</a> <b>100%</b><br />
+USA_RochestersCornWaterTower, <b>updated</b>, 227, <a href="https://www.munzee.com/map/9zy62tt99/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RochestersCornWaterTower.json" target="_blank">json</a><br />
