--- a/feladat.html
+++ b/feladat.html
@@ -592,3 +592,4 @@ USA_RochestersCornWaterTower, <b>updated</b>, 227, <a href="https://www.munzee.c
 USA_DuluthAnchor, <b>updated</b>, 74, <a href="https://www.munzee.com/map/cbqd308e5/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_DuluthAnchor.json" target="_blank">json</a> <b>100%</b><br />
 USA_SunFlake, <b>updated</b>, 278, <a href="https://www.munzee.com/map/cbq3yt42q/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SunFlake.json" target="_blank">json</a><br />
 USA_PrescottCardinals, <b>updated</b>, 93, <a href="https://www.munzee.com/map/9zyn8e7ff/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PrescottCardinals.json" target="_blank">json</a><br />
+Denmark_AgricultureFieldInHilleroed, <b>updated</b>, 93, <a href="https://www.munzee.com/map/u3by0nen4/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_AgricultureFieldInHilleroed.json" target="_blank">json</a><br />
